# django-conversate

./: .gitignore  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README.rst  package-lock.json  package.json  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
conversate/: __init__.py  admin.py  decorators.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
conversate/migrations/: 0001_initial.py  0002_auto_20181120_0655.py  0002_auto__chg_field_room_latest_timestamp__chg_field_message_timestamp.py  0003_auto__del_field_room_latest_timestamp__del_field_room_latest.py  0003_message_file.py  0004_auto__add_roomuser.py  0005_auto__add_field_roomuser_colour.py  0006_auto__add_field_roomuser_last_spoke.py  0007_auto__add_field_roomuser_last_focus.py  0008_auto__del_field_roomuser_last_focus__add_field_roomuser_has_focus.py  0009_auto__add_field_roomuser_alert__add_field_roomuser_mail_alert.py  0010_auto__add_field_roomuser_last_mail_alert.py  __init__.py
conversate/static/conversate/css/: styles.css
conversate/static/conversate/js/: room.js
conversate/templates/conversate/: base.html  index.html  room.html
conversate/templates/conversate/includes/: room_input.html  room_messages.html  room_sidebar.html
conversate/templatetags/: conversate.py
example/example/: settings.py  urls.py
example/templates/: base.html
static_src/js/: room.js
static_src/scripts/: build-css.sh  build-js.sh  build.sh  watch-css.sh  watch-js.sh  watch.sh
static_src/scss/: styles.scss
tests/: apps.py  settings.py  test_models.py  urls.py
