[metadata]
name = django-conversate
description = Persistant chat for Django
long_description = file: README.rst
keywords = django wiki
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
url = http://radiac.net/projects/django-conversate/
project_urls =
    Documentation = http://radiac.net/projects/django-conversate/
    Source = https://github.com/radiac/django-conversate
    Tracker = https://github.com/radiac/django-conversate/issues

[options]
python_requires = >=3.6
packages = find:
install_requires =
    Django>=2.2
    django-yaa-settings
    commonmark
    emoji
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example*
    tests*

[tool:pytest]
addopts = --black --flake8 --isort --cov=conversate --cov-report=term --cov-report=html
testpaths =
    tests
    conversate
    example
DJANGO_SETTINGS_MODULE = tests.settings

[flake8]
max-line-length = 88
ignore = E123,E128,E203,E231,E266,E501,W503
exclude = .tox,.git,*/static/CACHE/*,docs,node_modules,static_root,tmp

[isort]
multi_line_output = 3
line_length = 88
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .git,node_modules,.tox

[coverage:report]
omit=example

[mypy]
follow_imports = skip
ignore_missing_imports = true

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox,node_modules
